# Poly-model

./: .gitignore  EXPERIMENTS.md  README.md  arb_recover.py  check_arb_binance.py  check_positions.py  health_check.py  pyproject.toml  start_bot.bat  verify_pnl.py
bot/: ar.py  config.py  execution.py  ghost.py  main.py  paper.py  paper_mirror.py
bot/swarm/: consensus.py  models.py  search.py
config/: betfair_params.yaml  crypto_15m_params.yaml  crypto_1d_params.yaml  crypto_1h_params.yaml  crypto_params.yaml  hl_params.yaml  llm_updown_params.yaml  model_weights.yaml  over_below_params.yaml  risk_limits.yaml  signal_params.yaml  strike_params.yaml
docs/: deployment.md  discord_setup.md  prediction_risk_module_spec.md  server_setup.md
funding_arb/: check.py  main.py
funding_arb/config/: arb_params.yaml
funding_arb/src/: futures_client.py  position_manager.py  (+3 more)
perps/: main.py
scripts/: backtest_signal.py  bootstrap_crypto.py  bootstrap_training.py  build_strike_training_data.py  conviction_daily_summary.py  deploy.sh  filter_audit.py  ml_ev_check.py  ml_ev_oof.py  paper_ev_report.py  record_outcomes.py  redeem_positions.py  rehash_models.py  setup_v2_approvals.py  shadow_filter_discovery.py  swarm_audit.py  train_crypto_filter.py  train_strike_model.py  verify_server.py
src/: __init__.py  crypto_15m_main.py  crypto_1d_main.py  crypto_1h_main.py  crypto_conviction_main.py  crypto_main.py  dashboard.py  hl_main.py  llm_updown_main.py  main.py  monitor_agent.py  over_below_main.py  settle_arb_main.py  strike_scanner.py
tests/: test_task5.py  test_task7.py
(+84 files in other folders)
