[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-prediction"
version = "0.1.0"
description = "Polymarket 예측·리스크 자동매매 시스템"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "py-clob-client-v2>=1.0.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "pandas>=2.0",
    "PyYAML>=6.0",
    "anthropic>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
ml = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio",
]
